# pointnet_custom_shapes

./: .gitattributes  .gitignore  make_shapes_from_blender.sh  rotate_shapes.sh  transform_shapes.sh
blender/: blank.blend  make_cube_blender.py  make_sphere_blender.py  make_tetrahedron_blender.py
data/: basic_cube.pcd  basic_sphere.mtl  basic_sphere.pcd  tetrahedron.pcd
src/: make_cube_blender.py  make_sphere_blender.py  publish_frame1.sh
src/rotate_pcd/: CMakeLists.txt  compile_commands.json  package.xml
src/rotate_pcd/src/: main.cpp
src/transform_pcd/: CMakeLists.txt  package.xml
src/transform_pcd/src/: main.cpp
src/visualize_pcd/: CMakeLists.txt  compile_commands.json  package.xml
src/visualize_pcd/src/: main.cpp
