<?xml version="1.0"?>
<package format="2">
  <name>transform_pcd</name>
  <version>0.0.1</version>
  <description>The transform_pcd package</description>
  <maintainer email="christopher_hong@brown.edu">Christopher Hong</maintainer>
  <license>NA</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_ros</depend>
</package>
